2006-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh[STD_VECTOR]: Do not include
	array.hh, parray.hh at all.  Getting ready to flip the
	configure default.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

	* lily/source-file.cc (file::get_line): Help binary_search_bounds
	a bit.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

2006-02-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/array.hh: typo. 

2006-02-02  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: doc "\#" in text.

2006-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/pqueue.hh: Derive from std::vector.

	* flower/include/parray.hh: Conform to std::vector interface.
	Update users.

2006-02-02  Graham Percival  <gpermus@gmail.com>

	* Documentation/topdocs/NEWS.itely: grammar fix from Laura.

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/file-path.cc (is_file): remove if 0 section.

	* buildscripts/pfx2ttf.fontforge (err): robustness fix for
	selecting afii61352.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (boundary): Oops, reverse.

	* flower/string-convert.cc (convert::unsigned_string): Bugfix:
	remove superfluous `d'.

	* flower/include/std-vector.hh (boundary, top): Detach from class.
	Remove empty vector shell.

	* flower/include/array.hh (reverse, swap): Detach from class.
	Update users.
	
	* flower/include/std-vector.hh
	* flower/include/array.hh (concat): Globally change to insert ().

	
	* flower/include/std-vector.hh
	* flower/include/parray.hh
	* flower/include/array.hh (elem, elem_ref): Globally replace by
	at ().

2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): use ly: prefix for members.

	* python/convertrules.py (FatalConversionError.sub_cxx_id):
	anticipate on identifier substitutions.

2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
